first ssalty appreance

--- a/index.html
+++ b/index.html
@@ -12,20 +12,29 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;700&display=swap" rel="stylesheet">
+    <!-- Google Fonts Comfortaa -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Nunito:wght@200;300;400;700&display=swap"
+        rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="app.css">
-    <title>Museum Of Laure1Tsai</title>
+    <link rel="icon" type="images/x-icon" href="Salty/Logo/SSALTY_LOGO_BIG.png" />
+    <title>Ssalty_</title>
 </head>
 
 <body>
     <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
-        <a href="#" class="navbar-brand">LaurenTsai</a>
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle navigation">
+        <div class="justify-content-center text-center">
+            <a href="https://shopee.co.id/ssalty.lab" class="justify-content-center">Ssalty_</a>
+        </div>
+        <!-- <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-        </button>
+        </button> -->
         <div class="collapse navbar-collapse" id="navLinks">
-            <ul class="navbar-nav">
-                <li class="nav-item">
+            <ul class="navbar-nav justify-content-center">
+                <!-- <li class="nav-item">
                     <a href="#home" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
@@ -33,7 +42,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="#home" class="nav-link">Tickets</a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </nav>
@@ -41,40 +50,48 @@
         <div class="row align-items-center">
             <div class="col-lg-6">
                 <div id="headingGroup" class="text-white text-center d-none d-lg-block mt-5">
-                    <h1 class="">Museum<span>/</span>Of<span>/</span>LaurenTsai</h1>
-                    <h1 class="">Museum<span>/</span>Of<span>/</span>LaurenTsai</h1>
-                    <h1 class="">Museum<span>/</span>Of<span>/</span>LaurenTsai</h1>
-                    <h1 class="">Museum<span>/</span>Of<span>/</span>LaurenTsai</h1>
-                    <h1 class="">Museum<span>/</span>Of<span>/</span>LaurenTsai</h1>
-                    <h1 class="">Museum<span>/</span>Of<span>/</span>LaurenTsai</h1>
-                    <h1 class="">Museum<span>/</span>Of<span>/</span>LaurenTsai</h1>
+                    <h1 class="">Ssalty_<span>/</span><span>/</span>Ssalty_</h1>
+                    <h1 class="">Ssalty_<span>/</span><span>/</span>Ssalty_</h1>
+                    <h1 class="">Ssalty_<span>/</span><span>/</span>Ssalty_</h1>
+                    <h1 class="">Ssalty_<span>/</span><span>/</span>Ssalty_</h1>
+                    <h1 class="">Ssalty_<span>/</span><span>/</span>Ssalty_</h1>
+                    <h1 class="">Ssalty_<span>/</span><span>/</span>Ssalty_</h1>
                 </div>
             </div>
             <div id="img1" class="col-lg-6">
-                <img class="img-fluid" src="Laurent/shrinked/laurent1.jpg" alt="">
+                <img class="img-fluid" src="Salty/Logo/SSALTY_LOGO_BIG.png" alt="">
             </div>
+
         </div>
     </section>
 
     <section class="container-fluid px-0">
         <div class="row align-items-center content">
-            <div class="col-md-6 order-2 order-md-1">
-                <img class="img-fluid" src="Laurent/shrinked/laurent2.jpg" alt="">
+            <div class="col-md-6 order-2 order-md-1 text-center rounded">
+                <img class="img-fluid" src="Salty/Distracted_F.png" alt="">
             </div>
             <div class="col-md-6 text-center order-1 order-md-2">
                 <div class="row justify-content-center">
                     <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
-                        <h2>Museum Of LaurenTsai</h2>
+                        <a id="headline"
+                            href="https://shopee.co.id/Perfume-ssalty-Distracted-by-fleur-parfum-Unisex-parfum-tahan-lama-i.863483639.20051258992?xptdk=adf45f88-0bbd-4c8f-8912-be099174c29b">
+                            <h2>Distracted by Fleur</h2>
+                        </a>
                         <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
                         <p class="lead">
-                            From Wikipedia, the free encyclopedia, Lauren Tsai (born February 11, 1998), is an
-                            American visual artist, model, and actress.[2] She is best known to audiences for her
-                            appearance in
-                            the Fuji TV and Netflix series Terrace House: Aloha State. She made her acting debut in the
-                            third
-                            and final season of Legion, a television series based on the Marvel Comics character of the
-                            same
-                            name.
+                            Rasa yang membuat mempersona dan teralihkan dengan cara yang terbaik.
+                            Note Vanilla yang manisnya dikolaborasi untuk menciptakan aroma yang memabukkan indra
+                            dan
+                            memikat hati Anda.
+                            Dengan note awal dari bunga mawar dan fresh water, akan langsung teralihkan oleh aroma
+                            yang
+                            menyegarkan, menuju middle dari bunga mawar akan mengalihkan perhatian lebih jauh
+                            dengan,
+                            dengan aroma manis dan elegan yang akan membuat orang-orang terus kembali menciumnya.
+                            Akhirnya, note dasar dari vanila dan white musk akan mengalihkan perhatian Anda dengan
+                            pelukan yang hangat dan sensual, meninggalkan Anda terpersona dalam aroma yang
+                            mempersona
+                            dan menawan.
                         </p>
                     </div>
                 </div>
@@ -85,34 +102,48 @@
             <div class="col-md-6 text-center">
                 <div class="row justify-content-center">
                     <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
-                        <h2>Museum Of LaurenTsai</h2>
+                        <a id="headline"
+                            href="https://shopee.co.id/Perfume-ssalty-Anarchist-Garden-parfum-Wanita-Parfum-tahan-lama-i.863483639.19651259112?xptdk=70ab8b7c-2b6b-4468-9811-b2c398dbbe78">
+                            <h2>Anarchist Garden</h2>
+                        </a>
                         <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
                         <p class="lead">
-                            After moving out of the show's Honolulu house, she continued to pursue her modeling and
-                            artistic work. As a model, she's since appeared in a number of magazines, commercials,
-                            catalogs and fashion shows, including in Japan and Hawaii.
+                            Campuran aroma sweet dan citrus dengan rempah eksotis bernuansa buah.
+                            Aroma yang diawali sentuhan jeruk yang tajam, kardamom yang aromatik
+                            menciptakan armoa segar. Saat aroma menuju note middle, rum dan bunga
+                            davana memberikan aroma kompleks memikat dengan keharuman manis.
+                            Aroma yang meresap ke dalam note dasar adalah jangat dan sensual,
+                            yang menghasilkan campuran hangat dan menenangkan dari daun patchouli, benzoin, dan vetiver.
+                            Menghasilkan aroma yang elegan, unik, dan menjadi pusat perhatian.
                         </p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
-                <img class="img-fluid" src="Laurent/shrinked/laurent3.jpg" alt="">
+            <div class="col-md-6 rounded text-center">
+                <img class="img-fluid" src="Salty/Anarchist_G.png" alt="">
             </div>
         </div>
         <!-- THIRD ROW CONTENT -->
         <div class="row align-items-center content">
-            <div class="col-md-6 order-2 order-md-1">
-                <img class="img-fluid" src="Laurent/shrinked/laurent4.jpg" alt="">
+            <div class="col-md-6 order-2 order-md-1 text-center">
+                <img class="img-fluid rounded" src="Salty/Pure_D.png"">
             </div>
-            <div class="col-md-6 text-center order-1 order-md-2">
+            <div class=" col-md-6 text-center order-1 order-md-2">
                 <div class="row justify-content-center">
                     <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
-                        <h2>Museum Of LaurenTsai</h2>
+                        <a id="headline"
+                            href="https://shopee.co.id/Perfume-ssalty-Pure-disobey-Parfum-Pria-parfum-tahan-lama-i.863483639.20046763025?xptdk=0916c485-f330-4ec2-97b5-b98a69f8dd4a">
+                            <h2>Pure Disobey</h2>
+                        </a>
                         <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
-                        <p class="lead">
-                            In 2018, she drew a variant cover for issue No. 1 of West Coast Avengers.[4] In 2019, she
-                            followed with a variant cover for Captain Marvel No. 1.[5] She also collaborated with Marc
-                            Jacobs on a line of apparel and accessories.[6]
+                        <p class="lead">Rasa yang berani dan berontak yang menantang konvensi dengan perpaduan aroma
+                            yang unik.
+                            Parfum ini dibuka dengan notes yang memabukkan, menggabungkan aroma canabeans yang kaya dan
+                            kompleks dari kayu. Saat aroma berkembang, middle notes dari Cedar Virginia dan Resin
+                            muncul, menambahkan kedalaman dan kompleksitas pada aroma parfum. Akhirnya, parfum ini
+                            menetap pada notes akhir yang berani dan memikat, dengan campuran Guaiac Wood dan Incense
+                            yang beraroma smoky dan misterius. Hasilnya adalah aroma yang kompleks dan menarik yang
+                            menangkap esensi individualitas.
                         </p>
                     </div>
                 </div>
